--- a/style.css
+++ b/style.css
@@ -6,3 +6,23 @@
 body{
   background-color:#d1e0e0
 }
+
+.diamond {
+     width: 0;
+     height: 0;
+     border: 50px solid transparent;
+     border-bottom-color: red;
+     position: relative;
+     top: -50px;
+   }
+
+.diamond:after {
+     content: '';
+     position: absolute;
+     left: -50px;
+     top: 50px;
+     width: 0;
+     height: 0;
+     border: 50px solid transparent;
+     border-top-color: red;
+   }
