--- a/style.css
+++ b/style.css
@@ -26,3 +26,8 @@ body{
      border: 100px solid transparent;
      border-top-color: red;
    }
+.hw {
+  position:absolute;
+  top:50px;
+  left: 50px;
+}
