--- a/style.css
+++ b/style.css
@@ -7,27 +7,38 @@ body{
   background-color:#d1e0e0
 }
 
-.diamond {
-     width: 0;
-     height: 0;
-     border: 100px solid transparent;
-     border-bottom-color: black;
-     position: relative;
-     top: -100px;
-   }
-
-.diamond:after {
-     content: '';
-     position: absolute;
-     left: -100px;
-     top: 100px;
-     width: 0;
-     height: 0;
-     border: 100px solid transparent;
-     border-top-color: red;
-   }
-.hw {
-  position:absolute;
-  top:50px;
-  left: 50px;
-}
+.yin-yang {
+      width: 96px;
+      box-sizing: content-box;
+      height: 48px;
+      background: #eee;
+      border-color: red;
+      border-style: solid;
+      border-width: 2px 2px 50px 2px;
+      border-radius: 100%;
+      position: relative;
+    }
+.yin-yang:before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 0;
+      background: #eee;
+      border: 18px solid red;
+      border-radius: 100%;
+      width: 12px;
+      height: 12px;
+      box-sizing: content-box;
+    }
+.yin-yang:after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      background: red;
+      border: 18px solid #eee;
+      border-radius: 100%;
+      width: 12px;
+      height: 12px;
+      box-sizing: content-box;
+    }
